@@ -1,2 +1,2 @@
 #define UTS_RELEASE "0.0.85-pre2"
-#define ELKS_VERSION_CODE 673
+#define ELKS_VERSION_CODE 682
