@@ -1266,7 +1266,7 @@ save_configuration () {
 	echo -n "."
 
 	DEF_CONFIG="${1:-.config}"
-	DEF_CONFIG_H="include/linux/autoconf.h"
+	DEF_CONFIG_H="include/linuxmt/autoconf.h"
 
 	CONFIG=.tmpconfig
 	CONFIG_H=.tmpconfig.h
